# pathofmodifiersapp

./: .gitattributes  .gitignore  LICENSE  LICENSE.txt  Path_Of_Modifiers_Data_Model.drawio  README.md  SECURITY.md  deployment.md  development.md  package-lock.json  poe_ninja_currencies.csv  requirements.txt  schemas.py
src/backend/app/: .gitignore  Dockerfile  alembic.ini  backend_pre_start.py  data_retrieval_startup.sh  main.py  prestart.sh  pyproject.toml  requirements.txt
src/backend/app/alembic/: env.py
src/backend/app/alembic/versions/: 28b0800aa25d_new_revision_test.py  7be3677e7c93_first_revision.py
src/backend/app/app/: backend_pre_start.py  main.py
src/backend/app/app/api/: deps.py
src/backend/app/app/api/v1/: api.py
src/backend/app/app/core/: config.py
src/backend/app/app/crud/: __init__.py  base.py
src/backend/app/app/database/: Notes_about_pathofmodifiers db.txt  POM_OLTP_DB_PostgreSQL.sql  utils.py
src/backend/app/app/external_data_retrieval/: main.py  test.csv
src/backend/app/app/plotting/: plotter.py  plotter_module.py  test.py
src/backend/app/app/postgresqlfastaapiexample/: database.py  main.py
src/backend/app/app/tests/: conftest.py
src/backend/app/app/utils/: sort_algorithms.py
src/backend/app/app_examples/postgresqlfastaapiexample/: database.py  main.py  models.py  schemas.py
src/backend/app/core/: settings.py
src/backend/app/core/models/: database.py  models.py
src/backend/app/core/services/: services.py
src/backend/app/data/transforming_data/: add_regex.py  main.py  temp.py  test.csv  test.py
src/backend/app/database/: POM_OLTP_DB_PostgreSQL.sql
src/backend/app/migrations/: env.py
src/backend/app/migrations/versions/: 042066a4f2b8_merged_13d_and_98.py  060d5d2c8576_added_lol.py  13da6f882eff_removed_itemlevel.py  1757a2a4be5e_removed_position_primary_key_in_.py  2bf07dcf3bb6_added_next_change_id_table.py  35b975af3c18_changed_subcategories_column_type_from_.py  43b8615411bb_rename_currencyname_to_tradename.py  58e1fc9de124_v2_create_baseline_added_serial_keys_.py  5df530645887_create_baseline_version_4_with_identity_.py  8e367f7f8609_added_updatedat_createdat_in_.py  98edf7a48921_changed_name_of_range_to_roll.py  c1ff3b212b43_added_unique_bool_to_modifier_table.py  c6e3d491c8a5_create_a_baseline_migrations.py  ea5bf65e52fd_v3_create_baseline_new_primary_key_item.py  ee098521790e_create_constraints_for_textrolls_.py  ee098521790e_create_constraints_for_textrolls_static.py
src/backend/app/v1/: api.py
src/backend/app/v1/endpoints/: endpoint.py
src/backend/app/v1/poe-api/: requirements.txt
src/backend_api/: .dockerignore  Dockerfile  README.md  prestart.sh  pyproject.toml
src/backend_api/app/: backend_pre_start.py  exception_handlers.py  initial_data.py  limiter.py  logger.py  main.py  pyproject.toml
src/backend_api/app/alembic/: README  env.py
src/backend_api/app/alembic/replaceable_objects/: main.py
src/backend_api/app/alembic/versions/: 0f3f15f56b7d_added_unidentified_item_table.py  1006292668b8_create_hypertables_on_item_and_item_.py  14c8e1e053e4_v8_baseline_create_layout_for_.py  17daa1c96438_removing_modifier_auto_increment.py  2a6543a121d5_v7_baseline_upgraded_to_mapped_columns_.py  2d92a782e970_added_manual_trigger_for_aggregation_on_.py  35736bccbe58_v8_create_baseline_for_hypertable_.py  3d51a9d54735_added_related_unique_tracking_for_.py  42c53ebbc633_added_dynamicallycreated_to_modifiers.py  59a1d9f18849_added_checkconstraint_for_string_in_.py  62c3fbcdc773_changed_unidentified_item_table_to_.py  6d9ebe48cb1e_removed_created_and_updated_at_from_the_.py  874158ad90c6_updated_checkconstraint_with_underscore_.py  965e766db0a0_added_league_table.py  99c06cd7231c_v6_baseline_added_hashediptable_and_.py  9cecfcadcb2b_v7_baseline_converted_rows_to_mappedtype.py  c88ade998b10_removed_changeid_from_item.py  cc39d4eb113b_added_gameitemid_to_identified_items.py  d388fc80c6f7_added_user_table_for_login_with_user.py  (+5 more)
src/backend_api/app/api/: README.md  api.py  api_message_util.py  deps.py  params.py  utils.py
src/backend_api/app/app/: backend_pre_start.py  main.py
src/backend_api/app/core/: config.py  security.py
src/backend_api/app/crud/: __init__.py  base.py  user.py
src/backend_api/app/exceptions/: __init__.py  exception_base.py  exceptions.py
src/backend_api/app/logs/: logger.py
src/backend_api/app/middleware/: request_logs.py
src/backend_api/app/plotting/: README.md  __init__.py  plotter.py  utils.py
src/backend_api/app/rate_limit/: plot_rate_limit.py
src/backend_api/app/tests/: README.md  base_test.py  conftest.py  setup_test_database.py  types.py
src/backend_api/app/utils/: sort_algorithms.py  timing_tracker.py  user.py
src/backend_api/app/validation/: __init__.py  hashed_ip_validation.py  turnstile_validation.py  utils.py
src/backend_api/scripts/: prestart.sh
src/backend_api/scripts/test_scripts/: test_real_env_plot.sh
src/backend_data_retrieval/: .dockerignore  Dockerfile  Dockerfile.test  README.md  prestart.sh  pyproject.toml  start-tests.sh
src/backend_data_retrieval/data_retrieval/: dataretrieval_pre_start.py  pom_api_authentication.py  prestart.sh  pyproject.toml
src/backend_data_retrieval/data_retrieval/data_deposit/: README.md  deposit_base.py  main.py  utils.py
src/backend_data_retrieval/data_retrieval/external_data_retrieval/: main.py  main_v2.py  utils.py
src/backend_data_retrieval/data_retrieval/logs/: logger.py
src/backend_data_retrieval/data_retrieval/modifier_data_deposit/: README.md  deposit_modifier_data.py  modifier_processing_modules.py  utils.py
src/backend_data_retrieval/data_retrieval_app/: dataretrieval_pre_start.py  pom_api_authentication.py  utils.py
src/backend_data_retrieval/data_retrieval_app/data_deposit/: README.md  data_depositor_base.py  deposit_base.py  main.py
src/backend_data_retrieval/data_retrieval_app/external_data_retrieval/: cache.py  config.py  main.py  utils.py
src/backend_data_retrieval/data_retrieval_app/logs/: logger.py
src/backend_data_retrieval/data_retrieval_app/tests/: conftest.py  test_utils.py  utils.py
(+1095 files in other folders)
