[project]
name = "app"
version = "1.0.0"
description = "Path of Modifiers backend API"
requires-python = ">=3.12, <4.0"
dependencies = [
    "aiohttp>=3.12.13",
    "alembic>=1.16.2",
    "asyncio-redis-rate-limit>=1.0.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "email-validator>=2.2.0",
    "emails>=0.6",
    "fastapi[standard]>=0.115.2,<1.0.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pandas>=2.3.0",
    "passlib>=1.7.4",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "pytest-asyncio>=1.0.0",
    "pytest-trio>=0.8.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "sentry-sdk>=2.30.0",
    "slowapi>=0.1.9",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
]


[dependency-groups]
pytest = [
    "coverage>=7.9.1",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.0",
    "types-passlib>=1.7.7.20250602",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["backend_api/app"]


[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "ERROR"
log_cli_format = "%(message)s"

log_file = "app/logs/pytest.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
